main spacing fixed

--- a/src/componentes/Main/main.css
+++ b/src/componentes/Main/main.css
@@ -1,5 +1,5 @@
 main{
-    padding: 2rem;
+    padding: 4rem;
 }
 .main-container{
     display: grid;
@@ -27,4 +27,10 @@ main{
     padding: 1rem;
     border-radius: 20px;
     height: auto;
+}
+
+@media only screen and (max-width: 768px) {
+    main{
+        padding: 1rem;
+    }
 }
