--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,6 @@ ul, ol{
   padding: 0;
 }
 
-*{
+/* *{
   border: solid 1px red;
-}
+} */
